fix overflow

--- a/styles/Tournament.module.scss
+++ b/styles/Tournament.module.scss
@@ -3,6 +3,8 @@
 .сontainer {
   padding: 15px;
   position: relative;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .header {
